# TCCv02

./: .mxproject  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  FIXES_APPLIED.md  README.md  TCCv02.ioc  cmakestudy.ioc  vcpkg-configuration.json
Core/Inc/: adc.h  gpio.h  i2c.h  main.h  presets_in.h  presets_out.h  stm32g4xx_hal_conf.h  uart.h
Core/Src/: adc.c  gpio.c  i2c.c  main.c  presets_in.c  presets_out.c  stm32g4xx_it.c  uart.c
Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_hal_gpio.h
cmake/: arm-gcc-toolchain.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
code generator/: README.md
code generator/Config/: I2C.json  config.json  peripheral_settings.json  pinout_config.json  preset_settings.json  uart.json
code generator/Mappings/: hal_map.json  pin_map.json  presets.json
code generator/TEMPLATES/inc/: adc_template.h  gpio_template.h  i2c_template.h  main_template.h  presets_in_template.h  presets_out_template.h  uart_template.h
code generator/TEMPLATES/src/: adc_template.c  gpio_template.c  i2c_template.c  main_template.c  presets_in_template.c  presets_out_template.c  uart_template.c
code generator/src/: gpio_template.c
code generator/ui/: config.json  data.py  generate_all.py  gpio_generator.py  i2c_generator.py  main.py  tab_gpio.py  tab_i2c.py  tab_presets.py  tab_uart.py  uart_generator.py  unit_test.py  utils.py
code generator/ui/generators/: adc_generator.py  generate_all.py  gpio_generator.py  i2c_generator.py  main_generator.py  presets_generator.py  uart_generator.py
code generator/ui/handlers/: file_handler.py  pinout_handler.py  use_case_handler.py
code generator/ui/inc/: gpio_template.h  uart_template.h
code generator/ui/src/: gpio_template.c  i2c_template.c
